# Darwin

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Docker.md  Dockerfile  LICENSE  README.md  github-actions-Docker.yml  imgui.ini  log.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  docker-build.yml  github-actions-Docker.yml
Client/: CMakeLists.txt  async_client_call.h  audio_system.cpp  audio_system.h  darwin_client.cpp  darwin_client.h  darwin_constant.h  imgui.ini  input_acquisition.cpp  input_acquisition.h  log.txt  main.cpp  modal_character.cpp  modal_character.h  modal_death.cpp  modal_death.h  modal_disconnected.cpp  modal_disconnected.h  modal_login.cpp  modal_login.h  modal_ping.cpp  modal_ping.h  modal_resolution.cpp  modal_resolution.h  modal_server.cpp  modal_server.h  modal_stats.cpp  modal_stats.h  modal_victory.cpp  modal_victory.h  network_app.cpp  network_app.h  overlay_draw.cpp  overlay_draw.h  overlay_font.cpp  overlay_font.h  overlay_name.h  overlay_play.cpp  overlay_play.h  overlay_state.cpp  (+28 more)
Common/: CMakeLists.txt  client_audio.grpc.pb.h  client_audio.pb.h  client_audio.proto  client_parameter.grpc.pb.h  client_parameter.pb.h  client_parameter.proto  convert_math.cpp  convert_math.h  darwin_constant.h  darwin_service.grpc.pb.h  darwin_service.pb.h  darwin_service.proto  physic.cpp  physic.h  proto_helper.cpp  proto_helper.h  service.proto  stl_proto_wrapper.cpp  stl_proto_wrapper.h  vector.cpp  vector.h  vector_math.grpc.pb.h  vector_math.pb.h  vector_math.proto  world_parameter.grpc.pb.h  world_parameter.pb.h  world_parameter.proto  world_simulator.cpp  world_simulator.h
Server/: CMakeLists.txt  character_info.h  compute_world.cpp  compute_world.h  convert_math.cpp  convert_math.h  darwin_service_impl.cpp  darwin_service_impl.h  element_info.h  imgui.ini  log.txt  main.cpp  physic_engine.cpp  physic_engine.h  player_info.h  update_responder.cpp  update_responder.h  update_responder_container.cpp  update_responder_container.h  user_db.json  user_state.cpp  user_state.h  user_state_file.cpp  user_state_file.h  world_db.json  world_state.cpp  world_state.h  world_state_file.cpp  world_state_file.h
Test/: CMakeLists.txt
Test/Client/: CMakeLists.txt  main.cpp
Test/Server/: CMakeLists.txt  main.cpp  world_state_file_test.cpp  world_state_file_test.h  world_state_test.cpp  world_state_test.h
asset/font/ceviche-one/: OFL.txt
asset/font/fragile-bombers/: license.txt
asset/font/loops-of-fury/loopsoffury/: read me!.txt
asset/font/onick/onick/: License.txt
asset/font/pat-pacool/: READ ME.txt
asset/font/science-fair/: Notice - License.txt
asset/json/: client_audio.json  client_parameter.json  darwin_client.json
asset/shader/opengl/: darwin_ray_marching.frag  darwin_ray_marching.vert  display.frag  display.vert  ray_marching.frag
